tests/reference/asr-test_tuple2-b046610.stderr
semantic error: Runtime Indexing with tuple[i32, i32, i32] is not possible.
 --> tests/errors/test_tuple2.py:4:11
  |
4 |     print(t[x])
  |           ^^^^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
